--- a/cmd/kueueviz/backend/Dockerfile
+++ b/cmd/kueueviz/backend/Dockerfile
@@ -1,17 +1,21 @@
 # Build stage
-ARG BUILDER_IMAGE=golang:1.23
+ARG BUILDER_IMAGE=registry.cn-hangzhou.aliyuncs.com/ls-2018/mygo:v1.24.1
 ARG BASE_IMAGE=gcr.io/distroless/static:nonroot
 FROM --platform=${BUILDPLATFORM} ${BUILDER_IMAGE} AS builder
 
 # Copy Go modules manifests and download dependencies
 COPY go.mod go.sum ./
-RUN go mod download
+RUN --mount=type=cache,target=/root/.cache/go-build,id=go-build-cache \
+    --mount=type=cache,target=/root/.gopath,id=go-build-cache \
+    go mod download
 
 # Copy the application source code
 COPY . .
 
 # Build the application
-RUN CGO_ENABLED=0 go build -o /kueueviz
+RUN --mount=type=cache,target=/root/.cache/go-build,id=go-build-cache \
+    --mount=type=cache,target=/root/.gopath,id=go-build-cache \
+    CGO_ENABLED=0 go build -o /kueueviz
 
 # Runtime stage
 FROM --platform=${BUILDPLATFORM} ${BASE_IMAGE}
